fix small background not showing on safari/firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -184,12 +184,12 @@ footer {
 
 #background-image {
   display: block;
+  bottom: 0vh;
   margin: auto;
   max-height: 90%;
   width: 100%;
   width: auto;
   max-width: 100%;
-
 }
 
 .baked-bean {
@@ -269,7 +269,6 @@ and (-webkit-min-device-pixel-ratio: 2){
     font-size: 1.5em;
     line-height: 2em;
     padding: 0px 30px 0px 30px;
-
   }
 
   .baked-bean {
@@ -277,23 +276,17 @@ and (-webkit-min-device-pixel-ratio: 2){
   }
 
   #background-image {
-    position: relative;
     display: none;
-    max-width: 100%;
-    height: auto;
-    margin-left: 50%;
-    margin-right: 50%;
-
   }
 
   #background-image-small {
     position: relative;
+    display: block;
     left: 50%;
     top: 10vh;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    z-index: 0;
   }
 
   #top-border img {
@@ -304,7 +297,6 @@ and (-webkit-min-device-pixel-ratio: 2){
     position: absolute;
     right: 20px;
     bottom: 5%;
-
     height: auto;
     max-height: 80%;
     max-width: 80%;
@@ -315,7 +307,6 @@ and (-webkit-min-device-pixel-ratio: 2){
     position: absolute;
     left: 10px;
     bottom: 20px;
-
     height: auto;
     max-height: 65%;
     max-width: 65%;
